2007-10-28 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: start/stop_rt_timer care of being done 
	  in soft mode.

2007-10-21 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86_64/rtai_hal-h: upgrades for using latest kernel 
	  patching.
	* base/arche/x86_64/hal/hal.immed: upgrades for using latest kernel 
	  patching.

2007-10-19 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sys.c: force mlockall internally at task initting.

2007-10-16 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: rt_thread_create/join adapted to 
	  pthread_create thread return in NPTL
	* base/include/rtai_tasklets.h, base/tasklets/tasklets.c: adapted
	  to what returned above.

2007-09-22 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sys.c: do not init task_trap_handler for setting lxrt 
	  extension anymore.
	* base/usi/usi.c, base/tasklets/tasklets.c, base/ipc/fifos/fisos.c:
	  set lxrt extensions with the due set/rest functions, 
	  task_trap_handler is dead.

2007-09-05 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/i386/hal/hal.immedi, base/include/asm-i386/rtai_hal.h,
	* base/arch/x86_646/hal/hal.immed, base/include/asm-x86_646/rtai_hal.h:
	  get rid of hal_pended alltogether.

2007-09-02 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386/rtai_hal.h: revised and unified 
	  hal_pend_uncond for all Linux versions.
	* base/malloc/malloc.c: added TLSF based allocator, optionally
	  set at RTAI config.

2007-08-31  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/matrixx/GNUmakefile.am:  Modified to allow compilation from
	  an external folder.
	* rtai-lab/matrixx/GNUmakefile.in:  Modified to allow compilation from
	  an external folder.

2007-08-27  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/rtmain.c: Changed type for rt_BaseTaskPeriod to RTIME.
	* rtai-lab/matlab/rtmain.c: Changed type for rt_BaseTaskPeriod to RTIME.