@@ -5,5 +5,5 @@ EXTRA_CFLAGS += -I$(rtai_srctree)/base/include \
 
 obj-m += $(rtai_target).o
 
-calibrate_rt-objs := $(rtai_objs)
-smi_rt-objs := $(rtai_objs)
+rtai_calibrate-objs := $(rtai_objs)
+rtai_smi-objs := $(rtai_objs)
